// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip renders only children if text prop is not defined 1`] = `
<div
  className="reactist tooltip__wrapper"
>
  <span>
    Wrapped Content
  </span>
</div>
`;

exports[`Tooltip renders without crashing 1`] = `
<span
  className="reactist tooltip__wrapper"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <span>
    Wrapped Content
  </span>
  <span
    className="reactist tooltip"
  >
    <span
      className="tooltip__text"
    >
      tip
    </span>
  </span>
</span>
`;
